--- a/dna-src/zomes/personas/code/Cargo.toml
+++ b/dna-src/zomes/personas/code/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
   name = "personas"
-  version = "0.1.8"
-  authors = ["willem <willemolding@gmail.com>, Philip Beadle <philip.beadle@holo.host>"]
+  version = "0.1.9"
+  authors = ["Willem Olding <willemolding@gmail.com>, Philip Beadle <philip.beadle@holo.host>"]
   edition = "2018"
 [dependencies]
   serde = "=1.0.89"
